--- a/maplicator.vcxproj.filters
+++ b/maplicator.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="cCanvas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SuperImageButton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cApp.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cCanvas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SuperImageButton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
